syntax = "proto2";

import "google/protobuf/timestamp.proto";

package camera_backup;

service CameraBackup {
    rpc Exists(ExistsRequest) returns (ExistsResponse);
    rpc Send(stream SendRequest) returns (SendResponse);
}

message ExistsRequest {
    required string filename = 1;
}
message ExistsResponse {
    required bool exists = 1;
}

message Date {
    required uint32 year = 1;
    required uint32 month = 2;
}

message SendRequest {
    // On first request, must be set. On subsequent, are ignored.
    optional string filename = 1;
    optional Date created = 2;

    required bytes contents = 3;
}
message SendResponse {}
